fixed layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,10 @@ body {
 }
 
 @media (max-width: 800px) {
+  body {
+    min-width: 100vw;
+  }
+
   #root {
     min-width: fit-content;
   }
